--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -82,7 +82,15 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 12029118932676502430\n",
+      "incarnation: 4430198618793161203\n",
+      ", name: \"/gpu:0\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 357302272\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "}\n",
+      "incarnation: 16409824234084744738\n",
+      "physical_device_desc: \"device: 0, name: Tesla K80, pci bus id: 0000:00:04.0\"\n",
       "]\n"
      ]
     }
@@ -791,20 +799,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Wrong output shape. Found output shape (None, 15, 344) using parameters output_sequence_length=21 and french_vocab_size=344",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-bb29b379ef31>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel_final\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_model_final\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_final\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/workspace/project_tests.py\u001b[0m in \u001b[0;36mtest_model_final\u001b[0;34m(model_final)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_final\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menglish_vocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m     \u001b[0m_test_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/workspace/project_tests.py\u001b[0m in \u001b[0;36m_test_model\u001b[0;34m(model, input_shape, output_sequence_length, french_vocab_size)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_shape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;34m'Wrong output shape. Found output shape {} using parameters output_sequence_length={} and french_vocab_size={}'\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss_functions\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Wrong output shape. Found output shape (None, 15, 344) using parameters output_sequence_length=21 and french_vocab_size=344"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Model Loaded\n"
      ]
     }
    ],
@@ -818,20 +820,67 @@
     "    :param french_vocab_size: Number of unique French words in the dataset\n",
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
-    "    # TODO: Implement\n",
+    "    \n",
     "    learning_rate = 0.0001\n",
-    "    latent_dim = 128\n",
+    "    latent_dim = 128 \n",
+    "    \n",
+    "    inputs = Input(shape = input_shape[1:])\n",
+    "    embedding_layer = Embedding(input_dim = english_vocab_size, \n",
+    "                               output_dim = output_sequence_length, \n",
+    "                               mask_zero = False) (inputs)\n",
+    "    \n",
+    "    bidirectional = Bidirectional(GRU(output_sequence_length))(embedding_layer)\n",
+    "    \n",
+    "    encode = Dense(latent_dim, activation = 'relu')(bidirectional)\n",
+    "    \n",
+    "    decode = RepeatVector(output_sequence_length)(encode)\n",
+    "    \n",
+    "    Bidir_two = Bidirectional(GRU(latent_dim, return_sequences = True))(decode)\n",
+    "    \n",
+    "    outputs = TimeDistributed(Dense(french_vocab_size, activation = 'softmax'))(Bidir_two)\n",
+    "    \n",
+    "    model_final = Model(inputs = inputs, outputs = outputs)\n",
+    "    model_final.compile(loss = sparse_categorical_crossentropy,\n",
+    "                       optimizer = Adam(learning_rate),\n",
+    "                       metrics = ['accuracy'])\n",
+    "    \n",
+    "    return model_final\n",
+    "tests.test_model_final(model_final)\n",
+    "\n",
+    "\n",
+    "print('Final Model Loaded')\n",
+    "# TODO: Train the final model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def model_final(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
+    "#     \"\"\"\n",
+    "#     Build and train a model that incorporates embedding, encoder-decoder, and bidirectional RNN on x and y\n",
+    "#     :param input_shape: Tuple of input shape\n",
+    "#     :param output_sequence_length: Length of output sequence\n",
+    "#     :param english_vocab_size: Number of unique English words in the dataset\n",
+    "#     :param french_vocab_size: Number of unique French words in the dataset\n",
+    "#     :return: Keras model built, but not trained\n",
+    "#     \"\"\"\n",
+    "#     # TODO: Implement\n",
+    "#     learning_rate = 0.0001\n",
+    "#     latent_dim = 128\n",
     "    \n",
     "\n",
-    "    inputs = Input(shape = input_shape[1:])\n",
-    "    #layer 1\n",
-    "    embed = Embedding(input_dim =english_vocab_size,\n",
-    "                     output_dim = output_sequence_length,\n",
-    "                     mask_zero = False)(inputs)\n",
-    "    #layer 2\n",
-    "    hidden1 = Bidirectional(GRU(output_sequence_length,\n",
-    "                              return_sequences = True))(embed)\n",
-    "    #layer 3\n",
+    "#     inputs = Input(shape = input_shape[1:])\n",
+    "#     #layer 1\n",
+    "#     embed = Embedding(input_dim =english_vocab_size,\n",
+    "#                      output_dim = output_sequence_length,\n",
+    "#                      mask_zero = False)(inputs)\n",
+    "#     #layer 2\n",
+    "#     hidden1 = Bidirectional(GRU(output_sequence_length,\n",
+    "#                               return_sequences = True))(embed)\n",
+    "#     #layer 3\n",
     "#     hidden2 = Dense(latent_dim,\n",
     "#                    activation = 'relu')(hidden1)\n",
     "#     #layer 4\n",
@@ -840,22 +889,22 @@
     "#     #layer5\n",
     "#     hidden4 = Bidirectional(GRU(latent_dim,\n",
     "#                                return_sequences = True))(hidden3)\n",
-    "    #final\n",
-    "    outputs = Dense(french_vocab_size, \n",
-    "                   activation = 'relu')(hidden1)\n",
+    "#     final\n",
+    "#     outputs = Dense(french_vocab_size, \n",
+    "#                    activation = 'relu')(hidden4)\n",
     "    \n",
-    "    model_final = Model(inputs = inputs, outputs = outputs)\n",
-    "    model_final.compile(loss=sparse_categorical_crossentropy,\n",
-    "                  optimizer=Adam(learning_rate),\n",
-    "                  metrics=['accuracy'])\n",
+    "#     model_final = Model(inputs = inputs, outputs = outputs)\n",
+    "#     model_final.compile(loss=sparse_categorical_crossentropy,\n",
+    "#                   optimizer=Adam(learning_rate),\n",
+    "#                   metrics=['accuracy'])\n",
     "    \n",
     "    \n",
-    "    return model_final\n",
-    "tests.test_model_final(model_final)\n",
+    "#     return model_final\n",
+    "# tests.test_model_final(model_final)\n",
     "\n",
     "\n",
-    "print('Final Model Loaded')\n",
-    "# TODO: Train the final model"
+    "# print('Final Model Loaded')\n",
+    "# # TODO: Train the final model"
    ]
   },
   {
@@ -867,9 +916,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_2 (InputLayer)         (None, 15)                0         \n",
+      "_________________________________________________________________\n",
+      "embedding_2 (Embedding)      (None, 15, 21)            4200      \n",
+      "_________________________________________________________________\n",
+      "bidirectional_3 (Bidirection (None, 42)                5418      \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 128)               5504      \n",
+      "_________________________________________________________________\n",
+      "repeat_vector_2 (RepeatVecto (None, 21, 128)           0         \n",
+      "_________________________________________________________________\n",
+      "bidirectional_4 (Bidirection (None, 21, 256)           197376    \n",
+      "_________________________________________________________________\n",
+      "time_distributed_2 (TimeDist (None, 21, 345)           88665     \n",
+      "=================================================================\n",
+      "Total params: 301,163\n",
+      "Trainable params: 301,163\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Train on 110288 samples, validate on 27573 samples\n",
+      "Epoch 1/10\n",
+      "110288/110288 [==============================] - 22s 197us/step - loss: 5.1900 - acc: 0.3783 - val_loss: 3.2086 - val_acc: 0.4093\n",
+      "Epoch 2/10\n",
+      "110288/110288 [==============================] - 19s 171us/step - loss: 2.9518 - acc: 0.4190 - val_loss: 2.7811 - val_acc: 0.4444\n",
+      "Epoch 3/10\n",
+      "110288/110288 [==============================] - 19s 171us/step - loss: 2.7109 - acc: 0.4453 - val_loss: 2.6512 - val_acc: 0.4547\n",
+      "Epoch 4/10\n",
+      "110288/110288 [==============================] - 19s 171us/step - loss: 2.6160 - acc: 0.4637 - val_loss: 2.5820 - val_acc: 0.4715\n",
+      "Epoch 5/10\n",
+      "110288/110288 [==============================] - 19s 171us/step - loss: 2.5621 - acc: 0.4730 - val_loss: 2.5373 - val_acc: 0.4761\n",
+      "Epoch 6/10\n",
+      "110288/110288 [==============================] - 19s 171us/step - loss: 2.5187 - acc: 0.4786 - val_loss: 2.4909 - val_acc: 0.4825\n",
+      "Epoch 7/10\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.4507 - acc: 0.4948 - val_loss: 2.3943 - val_acc: 0.5034\n",
+      "Epoch 8/10\n",
+      "110288/110288 [==============================] - 19s 171us/step - loss: 2.3344 - acc: 0.5046 - val_loss: 2.2611 - val_acc: 0.5063\n",
+      "Epoch 9/10\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.1976 - acc: 0.5033 - val_loss: 2.1393 - val_acc: 0.5027\n",
+      "Epoch 10/10\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.1015 - acc: 0.5022 - val_loss: 2.0635 - val_acc: 0.5039\n",
+      "Sample 1:\n",
+      "les les les les les les <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
+      "Il a vu un vieux camion jaune\n",
+      "Sample 2:\n",
+      "est est est est est est est est est est en en en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
+      "new jersey est parfois calme pendant l' automne et il est neigeux en avril <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+     ]
+    }
+   ],
    "source": [
     "def final_predictions(x, y, x_tk, y_tk):\n",
     "    \"\"\"\n",
@@ -880,7 +985,15 @@
     "    :param y_tk: French tokenizer\n",
     "    \"\"\"\n",
     "    # TODO: Train neural network using model_final\n",
-    "    model = None\n",
+    "    model = model_final(\n",
+    "        input_shape = x.shape,\n",
+    "        output_sequence_length = y.shape[1],\n",
+    "        english_vocab_size = len(x_tk.word_index) + 1,\n",
+    "        french_vocab_size = len(y_tk.word_index) + 1)\n",
+    "    \n",
+    "    print(model.summary())\n",
+    "    \n",
+    "    model.fit(x, y, batch_size=1024, epochs=10, validation_split=0.2)\n",
     "\n",
     "    \n",
     "    ## DON'T EDIT ANYTHING BELOW THIS LINE\n",
