final sub | model 4 left

--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -798,8 +798,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dense layer documentation - https://keras.io/api/layers/core_layers/dense/ <br>\n",
+    "RepeatVector doc -https://keras.io/api/layers/reshaping_layers/repeat_vector/ check input and output sizes <br>\n",
+    "Embedding layer must be the first layer. <br> \n",
+    "Building autoencoders in keras (seq2seq) - https://blog.keras.io/building-autoencoders-in-keras.html (implement all) <br> \n",
+    "TimeDistributed doc - https://keras.io/api/layers/recurrent_layers/time_distributed/ <br> \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -826,18 +837,17 @@
     "    \n",
     "    inputs = Input(shape = input_shape[1:])\n",
     "    embedding_layer = Embedding(input_dim = english_vocab_size, \n",
-    "                               output_dim = output_sequence_length, \n",
-    "                               mask_zero = False) (inputs)\n",
+    "                               output_dim = output_sequence_length)(inputs)\n",
     "    \n",
     "    bidirectional = Bidirectional(GRU(output_sequence_length))(embedding_layer)\n",
     "    \n",
     "    encode = Dense(latent_dim, activation = 'relu')(bidirectional)\n",
     "    \n",
-    "    decode = RepeatVector(output_sequence_length)(encode)\n",
+    "    decode = RepeatVector(output_sequence_length)(encode) ##see seq2seq encoders and decoders\n",
     "    \n",
     "    Bidir_two = Bidirectional(GRU(latent_dim, return_sequences = True))(decode)\n",
     "    \n",
-    "    outputs = TimeDistributed(Dense(french_vocab_size, activation = 'softmax'))(Bidir_two)\n",
+    "    outputs = TimeDistributed(Dense(french_vocab_size, activation = 'softmax'))(Bidir_two) ##applied Dense to all timesteps\n",
     "    \n",
     "    model_final = Model(inputs = inputs, outputs = outputs)\n",
     "    model_final.compile(loss = sparse_categorical_crossentropy,\n",
@@ -854,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -926,19 +936,19 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_2 (InputLayer)         (None, 15)                0         \n",
+      "input_6 (InputLayer)         (None, 15)                0         \n",
       "_________________________________________________________________\n",
-      "embedding_2 (Embedding)      (None, 15, 21)            4200      \n",
+      "embedding_6 (Embedding)      (None, 15, 21)            4200      \n",
       "_________________________________________________________________\n",
-      "bidirectional_3 (Bidirection (None, 42)                5418      \n",
+      "bidirectional_11 (Bidirectio (None, 42)                5418      \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 128)               5504      \n",
+      "dense_11 (Dense)             (None, 128)               5504      \n",
       "_________________________________________________________________\n",
-      "repeat_vector_2 (RepeatVecto (None, 21, 128)           0         \n",
+      "repeat_vector_6 (RepeatVecto (None, 21, 128)           0         \n",
       "_________________________________________________________________\n",
-      "bidirectional_4 (Bidirection (None, 21, 256)           197376    \n",
+      "bidirectional_12 (Bidirectio (None, 21, 256)           197376    \n",
       "_________________________________________________________________\n",
-      "time_distributed_2 (TimeDist (None, 21, 345)           88665     \n",
+      "time_distributed_6 (TimeDist (None, 21, 345)           88665     \n",
       "=================================================================\n",
       "Total params: 301,163\n",
       "Trainable params: 301,163\n",
@@ -947,25 +957,25 @@
       "None\n",
       "Train on 110288 samples, validate on 27573 samples\n",
       "Epoch 1/10\n",
-      "110288/110288 [==============================] - 22s 197us/step - loss: 5.1900 - acc: 0.3783 - val_loss: 3.2086 - val_acc: 0.4093\n",
+      "110288/110288 [==============================] - 21s 187us/step - loss: 5.1993 - acc: 0.3801 - val_loss: 3.2174 - val_acc: 0.4093\n",
       "Epoch 2/10\n",
-      "110288/110288 [==============================] - 19s 171us/step - loss: 2.9518 - acc: 0.4190 - val_loss: 2.7811 - val_acc: 0.4444\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.9537 - acc: 0.4176 - val_loss: 2.7903 - val_acc: 0.4433\n",
       "Epoch 3/10\n",
-      "110288/110288 [==============================] - 19s 171us/step - loss: 2.7109 - acc: 0.4453 - val_loss: 2.6512 - val_acc: 0.4547\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.7206 - acc: 0.4439 - val_loss: 2.6634 - val_acc: 0.4496\n",
       "Epoch 4/10\n",
-      "110288/110288 [==============================] - 19s 171us/step - loss: 2.6160 - acc: 0.4637 - val_loss: 2.5820 - val_acc: 0.4715\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.6305 - acc: 0.4584 - val_loss: 2.5972 - val_acc: 0.4667\n",
       "Epoch 5/10\n",
-      "110288/110288 [==============================] - 19s 171us/step - loss: 2.5621 - acc: 0.4730 - val_loss: 2.5373 - val_acc: 0.4761\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.5806 - acc: 0.4702 - val_loss: 2.5600 - val_acc: 0.4738\n",
       "Epoch 6/10\n",
-      "110288/110288 [==============================] - 19s 171us/step - loss: 2.5187 - acc: 0.4786 - val_loss: 2.4909 - val_acc: 0.4825\n",
+      "110288/110288 [==============================] - 19s 171us/step - loss: 2.5480 - acc: 0.4746 - val_loss: 2.5291 - val_acc: 0.4796\n",
       "Epoch 7/10\n",
-      "110288/110288 [==============================] - 19s 172us/step - loss: 2.4507 - acc: 0.4948 - val_loss: 2.3943 - val_acc: 0.5034\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.5149 - acc: 0.4817 - val_loss: 2.4914 - val_acc: 0.4849\n",
       "Epoch 8/10\n",
-      "110288/110288 [==============================] - 19s 171us/step - loss: 2.3344 - acc: 0.5046 - val_loss: 2.2611 - val_acc: 0.5063\n",
+      "110288/110288 [==============================] - 19s 170us/step - loss: 2.4575 - acc: 0.4925 - val_loss: 2.4024 - val_acc: 0.5019\n",
       "Epoch 9/10\n",
-      "110288/110288 [==============================] - 19s 172us/step - loss: 2.1976 - acc: 0.5033 - val_loss: 2.1393 - val_acc: 0.5027\n",
+      "110288/110288 [==============================] - 19s 172us/step - loss: 2.3455 - acc: 0.5003 - val_loss: 2.2869 - val_acc: 0.4970\n",
       "Epoch 10/10\n",
-      "110288/110288 [==============================] - 19s 172us/step - loss: 2.1015 - acc: 0.5022 - val_loss: 2.0635 - val_acc: 0.5039\n",
+      "110288/110288 [==============================] - 19s 171us/step - loss: 2.2427 - acc: 0.4965 - val_loss: 2.2017 - val_acc: 0.5006\n",
       "Sample 1:\n",
       "les les les les les les <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
       "Il a vu un vieux camion jaune\n",
